# guarantee-email-agent

./: .env.example  .gitignore  IMPLEMENTATION_NOTES.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  RUNNING.md  config.yaml  debug_llm.py  main.py  pyproject.toml  test_step_workflow.py
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-initialize-python-project-with-uv.md  1-2-create-configuration-schema-and-validation.md  1-3-environment-variable-management-for-secrets.md  1-4-file-path-verification-and-mcp-connection-testing.md  2-1-all-mcp-clients-with-retry-logic-and-circuit-breaker.md  3-1-instruction-parser-and-main-orchestration-logic.md  3-2-scenario-routing-and-llm-response-generation.md  3-3-email-parser-and-serial-number-extraction.md  3-4-end-to-end-email-processing-pipeline.md  3-5-cli-agent-run-command-and-graceful-shutdown.md  3-6-structured-logging-and-graceful-degradation.md  4-1-eval-framework-core-format-execution-pass-rate.md  4-2-eval-reporting-and-continuous-improvement-loop.md  4-3-error-handling-exit-codes-and-comprehensive-logging.md  4-4-signal-handling-idempotent-startup-and-daemon-mode.md  4-5-mcp-tool-calling-architecture.md  4-6-crm-abacus-api-spec.md  4-6-refactor-mcp-to-simple-tools.md  5-1-refactor-to-step-by-step-state-machine.md  5-2-xml-step-instruction-format.md  5-3-supabase-activity-logging.md  STORY-5.1-PROGRESS.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics-optimized.md  epics.md  prd.md  (+1 more)
_bmad/_config/: files-manifest.csv  (+1 more)
docs/: deployment.md
instructions/: WORKFLOW.md  main.md
migrations/: 001_create_telemetry_tables.sql
scripts/: agent-status.sh  agent-stop.sh  get_gmail_token.py  railway-start.sh
tests/: test_cli.py  test_package_structure.py
(+155 files in other folders)
